cmake_minimum_required(VERSION 3.22)

set(BUILD_VERSION "1" CACHE INTERNAL "Build version")
set(PROJECT_BUILD_VERSION ${BUILD_VERSION})

project(ipfilter VERSION 0.0.${PROJECT_BUILD_VERSION})

set(CMAKE_CXX_STANDARD 20)

add_executable(ipfilter main.cpp IpAddress.cpp)

install(TARGETS ipfilter RUNTIME DESTINATION bin)

set(CPACK_GENERATOR "DEB")
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
set(CPACK_PACKAGE_CONTACT example@example.com)
include(CPack)
